15中国疫情地图完整渲染

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="echarts.min.js">
+      //  这里引入挂载到全局window了，实例化的需要window.echarts
+    </script>
+    <script src="china.js"></script>
   </body>
 </html>
